# django-custom-table

./: .gitignore  LICENSE  README.md  requirements.txt  setup.cfg
.github/workflows/: django.yml
custom_table/: admin.py  apps.py  formats.py  urls.py  views.py
custom_table/migrations/: 0001_initial.py
custom_table/models/: __init__.py  customizable.py  metadata.py
example_project/: manage.py  refreshdb.sh
example_project/example_app/: admin.py  models.py  views.py
example_project/example_app/management/commands/: create_admin_user.py  create_test_data.py
example_project/example_app/migrations/: 0001_initial.py
example_project/example_app/templates/: custom_table_edit.html  custom_table_list.html
example_project/example_project/: asgi.py  settings.py  urls.py  wsgi.py
example_project/tests/: base.py  test_custom_table.py  test_metadata_default_format.py  test_metadata_rest_spa_format.py
example_project/tests/forms/: test_custom_table.py  test_metadata_default_format.py  test_metadata_rest_spa_format.py
example_project/tests/views/: test_rest_data_view.py  test_rest_metadata_view.py
