[metadata]
name = django-custom-table
version = 0.2
description = A Django app for building customizable tables.
long_description_content_type = text/markdown
long_description = file: README.md
url = https://github.com/warrenwestfall/django-custom-table
author = Warren Westfall
author_email = warren.westfall@gmail.com
license = MIT License
classifiers =
    Environment :: Web Environment
    Framework :: Django
    Framework :: Django :: 4.0
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Topic :: Internet :: WWW/HTTP
    Topic :: Internet :: WWW/HTTP :: Dynamic Content

[options]
include_package_data = true
packages = find:
python_requires = >=3.8
install_requires =
    Django >= 4.0
[options.packages.find]
exclude = example_project
